[package]
authors = ["IMMER's Developers <dev@immer.com>"]
categories = ["asynchronous", "development-tools::debugging", "wasm"]
description = "Small helper crate to configure structured logging for IMMER's services using the tracing ecosystem."
documentation = "https://docs.rs/kamu-logging"
edition = "2024"
keywords = ["actix", "logging", "systemd", "tracing", "wasm"]
license = "MIT"
name = "kamu-logging"
publish = true
readme = "README.md"
repository = "https://github.com/pt-immer/kamu-logging"
rust-version = "1.88"
version = "1.0.0"

[features]
default = ["systemd", "with-actix-web"]
systemd = ["dep:console", "dep:tracing-journald", "dep:tracing-log", "dep:tracing-subscriber"]
wasm32 = ["dep:console_error_panic_hook", "dep:tracing-subscriber", "dep:wasm-tracing"]
with-actix-web = ["dep:actix-web", "dep:tracing-actix-web"]
with-otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]

[dependencies]
actix-web = { version = "4", optional = true, default-features = false }
console = { version = "~0.16", optional = true }
console_error_panic_hook = { version = "~0.1.7", optional = true }
thiserror = "~2"
tracing = "~0.1"
tracing-actix-web = { version = "~0.7", optional = true }
tracing-journald = { version = "~0.3", optional = true }
tracing-log = { version = "~0.2", optional = true }
wasm-tracing = { version = "~2.1.0", features = ["tracing-log"], optional = true }

opentelemetry = { version = "~0.32", optional = true, default-features = false, features = [
    "trace",
] }
opentelemetry-otlp = { version = "~0.32", optional = true, default-features = false, features = [
    "http-proto",
    "reqwest-blocking-client",
    "trace",
] }
opentelemetry_sdk = { version = "~0.32", optional = true, default-features = false, features = [
    "trace",
] }
tracing-opentelemetry = { version = "~0.33", optional = true, default-features = false, features = [
    "tracing-log",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "~0.3", optional = true, features = [
    "ansi",
    "chrono",
    "env-filter",
    "fmt",
    "json",
    "registry",
    "smallvec",
    "std",
    "tracing-log",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber = { version = "~0.3", optional = true, default-features = false, features = [
    "alloc",
    "fmt",
] }

[dev-dependencies]
actix-web = "4"

[[example]]
name = "minimal"
required-features = ["systemd"]

[[example]]
name = "json_stdout"
required-features = ["systemd"]

[[example]]
name = "actix"
required-features = ["systemd", "with-actix-web"]
